# vv-agent

./: .gitignore  AGENTS.md  README.md  README_ZH.md  contract.lock.json  local_settings.example.py  pyproject.toml
docs/: ARCHITECTURE.md  MIGRATION_FROM_V0.md  REFACTOR_BASELINE.md  REFACTOR_EXECUTION_PLAN.md  TOOL_PROTOCOL.md  app-server-backend-migration.md  app-server-host-integration.md  app-server-runtime-mapping.md  app-server-vclaw-migration.md  app-server.md  architecture.md  checkpoint-resume.md  development.md  index.md  model-settings.md  output-validation.md  parity-contract.md  run-budgets.md  runtime-control.md
examples/: .env.example  01_quick_start.py  02_agent_profiles.py  03_sdk_client.py  04_session_api.py  05_ask_user_resume.py  06_runtime_hooks.py  07_token_budget_guard.py  08_custom_tool.py  09_resource_loader.py  10_read_image.py  11_sub_agent_pipeline.py  12_skill_activation.py  13_arxiv_pipeline.py  14_batch_sub_tasks.py  15_memory_compact_hook.py  16_hook_composition.py  17_error_recovery.py  18_cancellation.py  19_streaming.py  20_thread_backend.py  21_state_checkpoint.py  22_sdk_advanced.py  23_celery_backend.py  24_workspace_backends.py  25_temporary_tool_injection.py  26_app_server_channel_lifecycle.py  27_app_server_stdio_client.py  28_app_server_notification_opt_out.py  29_app_server_schema_backpressure.py  README.md  README_ZH.md  agent_profiles.py  arxiv_agent_memory_pipeline.py  ask_user_resume_session.py  custom_ticket_tool_embed.py  cycle_budget_guard_hook.py  quick_start_programmatic.py  read_image_to_markdown.py  remotion_skill_demo.py  (+6 more)
tests/: test_after_cycle_hooks.py  test_agent_as_tool.py  test_agent_defaults.py  test_agent_tool_contract.py  test_app_server_approval.py  test_app_server_backpressure.py  test_app_server_cli.py  test_app_server_client.py  test_app_server_contract_parity.py  test_app_server_durable_resume.py  test_app_server_initialize.py  test_app_server_item_mapper.py  test_app_server_jsonrpc.py  test_app_server_notification_filtering.py  test_app_server_processor_serialization.py  test_app_server_replay.py  test_app_server_request_serialization.py  test_app_server_schema.py  test_app_server_thread_lifecycle.py  test_app_server_thread_store.py  test_app_server_thread_turn.py  test_app_server_transport.py  test_approval_protocol.py  test_backends.py  (+121 more)
(+233 files in other folders)
