[project]
name = "vv-agent"
version = "0.1.32"
description = "Vector Vein inspired agent framework with cycle runtime, tools and memory management"
readme = "README.md"
authors = [
    { name = "andersonby", email = "andersonby@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.109.1",
    "pyyaml>=6.0.3",
    "ripgrep>=14.1.0",
    "vv-llm>=0.3.73",
]

[project.optional-dependencies]
celery = ["celery[redis]>=5.4"]
s3 = ["boto3>=1.35"]

[dependency-groups]
dev = [
    "celery[redis]>=5.4",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]

[project.scripts]
vv-agent = "vv_agent.cli:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vv_agent"

[tool.uv.sources]
vv-llm = { path = "../ref_repos/vv-llm" }

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "live: tests that call real remote LLM endpoints",
]

[tool.ruff]
line-length = 130
target-version = "py312"
exclude = [
    "local_settings.py",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.src]
include = ["src", "tests"]
